<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Destination ids for menu items have to match destinations in the nav graph.-->
    <item
        android:id="@+id/bottomnav_home"
        android:icon="@drawable/home_24dp"
        android:title="@string/bottomnav_home_title" />
    <item
        android:id="@+id/bottomnav_entities"
        android:icon="@drawable/lightbulb_24dp"
        android:title="@string/bottomnav_entities_title" />
    <item
        android:id="@+id/bottomnav_endpoints"
        android:icon="@drawable/router_24dp"
        android:title="@string/bottomnav_endpoints_title" />
    <item
        android:id="@+id/bottomnav_settings"
        android:icon="@drawable/settings_24dp"
        android:title="@string/bottomnav_preferences_title" />
</menu>
