<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_light_details_info"
        android:icon="@drawable/info_24dp"
        android:title="@string/lightDetail_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_light_details_name_edit"
        android:icon="@drawable/edit_24dp"
        android:title="@string/light_rename"
        app:showAsAction="ifRoom" />
    <!-- Always show menu item inside the overflow menu because this is just an (accessible) alternative to the SwipeRefreshLayout. -->
    <item
        android:id="@+id/menu_light_details_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />
</menu>
