<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/lights">

    <fragment
        android:id="@+id/lights"
        android:name="org.d3kad3nt.sunriseClock.ui.mainWindow.Lights"
        android:label="@string/lights_title"
        tools:layout="@layout/lights_fragment">
        <action
            android:id="@+id/action_lights_to_lightInfo"
            app:destination="@id/lightInfo" />
    </fragment>
    <fragment
        android:id="@+id/lightInfo"
        android:name="org.d3kad3nt.sunriseClock.ui.mainWindow.LightInfo"
        android:label="@string/lightInfo_title"
        tools:layout="@layout/light_info_fragment" />
    <fragment
        android:id="@+id/mainSettingsFragment"
        android:name="org.d3kad3nt.sunriseClock.ui.preferences.MainSettingsFragment"
        android:label="@string/preferences_title">
        <action
            android:id="@+id/action_mainSettingsFragment_to_connectivityFragment"
            app:destination="@id/connectivityFragment" />
        <action
            android:id="@+id/action_mainSettingsFragment_to_alarmFragment"
            app:destination="@id/alarmFragment" />
        <action
            android:id="@+id/action_mainSettingsFragment_to_interfaceFragment"
            app:destination="@id/interfaceFragment" />
        <action
            android:id="@+id/action_mainSettingsFragment_to_debugFragment"
            app:destination="@id/debugFragment" />
    </fragment>
    <fragment
        android:id="@+id/connectivityFragment"
        android:name="org.d3kad3nt.sunriseClock.ui.preferences.ConnectivityFragment"
        android:label="@string/conectivity_settings_title" />
    <action android:id="@+id/action_global_mainSettingsFragment" app:destination="@id/mainSettingsFragment"/>
    <fragment
        android:id="@+id/alarmFragment"
        android:name="org.d3kad3nt.sunriseClock.ui.preferences.AlarmFragment"
        android:label="@string/alarm_settings_title" />
    <fragment
        android:id="@+id/debugFragment"
        android:name="org.d3kad3nt.sunriseClock.ui.preferences.DebugFragment"
        android:label="@string/debug_settings_title" />
    <fragment
        android:id="@+id/interfaceFragment"
        android:name="org.d3kad3nt.sunriseClock.ui.preferences.InterfaceFragment"
        android:label="@string/interface_settings_title" />
</navigation>
